<resources>
    <string name="app_name">Linker</string>
    <string name="motto">Let us organize links to the people, places and things you love.</string>

    <!-- AppBar actions -->
    <string name="action_settings">Settings</string>
    <string name="action_bubbles">Linker Bubbles</string>
    <string name="action_edit">Edit</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="info_title">About version and author</string>
    <string name="info_summary">v. %1$s by Aesthetic Apps Studios</string>
    <string name="info_author_title">About Linker</string>
    <string name="info_author"><![CDATA[
        Linker - Let us organize links to the people, places and things you love.<br/><br/>
        All rights reserved.<br/>
        Features Hover Library © Nest Labs used under Apache License 2.0<br/><br/>
        Created by Mike. L logo by Tuptaju.<br/><br/>
        Version %1$s.<br/>
        <b>© Aesthetic Apps Studios 2018-19</b>
    ]]></string>

    <!-- Service -->
    <string name="service_is_active">Linker service is active.</string>

    <!-- Browse items content -->
    <string name="search_for_links_in_your_library">Search for links in your library…</string>
    <string name="action_search">Search</string>
    <string name="sort_by_column">Sort by: %s</string>

    <!-- Delete content -->
    <string name="title_confirm_delete">Remove item</string>
    <string name="message_confirm_delete">Are you sure you want to remove this item?</string>
    <string name="please_delete">Delete</string>
    <string name="dont_delete">Don\'t delete</string>

    <!-- Home content -->
    <string name="recent">Quick Share</string>
    <string name="favorites">Favorites</string>
    <string name="tags_cloud">Tags Cloud</string>
    <string name="so_empty_here">There\'s so empty here :(</string>

    <!-- AddEdit content -->
    <string name="add_edit_my_description">My description....</string>
    <string name="add_edit_link_url">Link URL</string>
    <string name="add_edit_link_title">Add/Edit Link</string>
    <string name="add_edit_title_hint">Title</string>
    <string name="addedit_confirm_exit">Discard changes?</string>
    <string name="addedit_message_confirm_exit">Confirm exit</string>
    <string name="addedit_dont_exit_button">Stay</string>
    <string name="addedit_delete_button">Exit</string>
    <string name="new_tag">New Tag…</string>
    <string name="title_error">You need to enter the title.</string>
    <string name="url_error">You need to enter a valid URL.</string>
    <string name="edit_confirm_exit">Confirm exit</string>
    <string name="edit_message_confirm_exit">Are you sure you want to abort your changes?</string>
    <string name="edit_save">Return and edit</string>
    <string name="edit_discard">Discard changes</string>
    <string name="add_edit_blank_tag_error">You can\'t add blank tag!</string>
    <string name="no_description">No description</string>
    <string name="title_activity_edit">EditActivity</string>

    <!-- Bottom navigation -->
    <string name="nav_add">New</string>
    <string name="nav_library">Library</string>
    <string name="nav_home">Home</string>

    <!-- Sample strings for layout designer -->
    <string name="sample_title_of_a_link">Title of a link</string>
    <string name="sample_link">github.com</string>
    <string name="sample_recent_item">Example Item</string>
    <string name="sample_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a,
        scelerisque sed, lacinia in, mi. Cras vel lorem.
    </string>
    <string name="sample_enormously_long_tag">#Enormously Long Tag</string>

    <!-- LoginActivity -->
    <string name="signin_success">Successfully signed in, loading…</string>
    <string name="something_went_wrong">Something went extremely wrong while trying to sign in.
        We\'re trying our best, but make sure your internet connection is alive and your credentials are correct.
    </string>
    <string name="signing_in">Signing in…</string>
    <string name="copyright">&#169; Aesthetic Apps Studios 2018–19</string>
    <string name="sign_in_to_linker_with_google">Sign In to Linker with Google.</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_account">Account</string>
    <string name="log_out">Log out</string>

    <!-- Categories -->
    <string name="add_category">Add Category…</string>
    <string name="categories_title">Categories</string>
    <string name="category">Category</string>
    <string name="swipe_to_remove_category">Swipe to remove Category…</string>
    <string name="categories_nonunique_name_error">Category already exists!</string>

    <!--Welcome Screen-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!--slider-->
    <string name="slide_1_title">Welcome to Linker!</string>
    <string name="slide_1_desc">Thank you for using our app! Let\'s take a short tour on what you can do with us now!</string>

    <string name="slide_2_title">Organize your places on the Internet</string>
    <string name="slide_2_desc">So many ways of managing your important stuff.</string>

    <string name="slide_3_title">Two types of UI – easy access</string>
    <string name="slide_3_desc">Standard or Floating Bubble.</string>

    <string name="slide_4_title">Automatic parsing and categorizing URLs</string>
    <string name="slide_4_desc">From anywhere you want.</string>

    <string name="slide_5_title">App learns how to categorize your links</string>
    <string name="slide_5_desc">Quick and convenient way to keep everything in its place.</string>

    <string name="slide_6_title">Easy tag system</string>
    <string name="slide_6_desc">Click on tag from TagCloud or any item to search library.</string>

    <string name="slide_7_title">Start your experience with Linker!</string>
    <string name="slide_7_desc">Your experience begins now!</string>
    <string name="paste_cut_shortcuts_title">Quick Shortcuts</string>
    <string name="paste_cut_shortcuts_summary">Show Cut/Paste buttons in Add/Edit Link Screen</string>
    <string name="categories_blank_name_error">You cannot add Category with empty name.</string>

    <!-- New stuff, for refactor -->
</resources>
