<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/signInTv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/linkerLogoIv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"/>

    <TextView
            android:text="@string/sign_in_to_linker_with_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signInTv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linkerLogoIv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"/>

    <TextView
            android:text="@string/copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/aasTv"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"/>

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loggingPb"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/signInTv"
            android:visibility="gone"/>

    <TextView
            android:text="@string/signing_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signingInfoTv"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loggingPb"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:visibility="gone"/>

    <TextView
            android:text="@string/something_went_wrong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/errorTv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/motto"
            android:id="@+id/mottoIv"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/aasTv"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>