<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="@dimen/categories_recycler_view_height"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/categoriesRv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0"/>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/catTitleTv"
                android:id="@+id/cardView">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/addCategoryEt"
                        app:layout_constraintEnd_toStartOf="@+id/addCategoryIb"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp"
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:inputType="textCapWords"
                        android:hint="@string/add_category"/>

                <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="0dp"
                        app:srcCompat="@drawable/ic_add_circle_black"
                        android:id="@+id/addCategoryIb"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@android:color/transparent"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <TextView
                android:text="@string/categories_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/catTitleTv"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        <TextView
                android:text="@string/swipe_to_remove_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>