<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp">

        <android.support.constraint.ConstraintLayout
                android:descendantFocusability="blocksDescendants"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    app:srcCompat="@drawable/linker_logo_black"
                    android:id="@+id/linkerLogoIv"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tagsCloudRecyclerView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>

            <TextView
                    android:text="@string/tags_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tagsTitleTv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary_text"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/favRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favTitleTv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/recentRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/secondary_text"/>

            <TextView
                    android:text="@string/recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recentTitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary_text"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/recentTitleTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/recentRecyclerView"
                    android:layout_marginStart="8dp"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/favTitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/favRecyclerView"
            />

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tagsTitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/tagsCloudRecyclerView"/>

            <TextView
                    android:text="@string/so_empty_here"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/emptyShareTv"
                    android:fontFamily="casual"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/recentTitleTv"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/favTitleTv"
                    android:gravity="center" android:textSize="18sp"/>

            <TextView
                    android:text="@string/so_empty_here"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/emptyFavsTv"
                    android:fontFamily="casual"
                    app:layout_constraintTop_toBottomOf="@+id/favTitleTv"
                    app:layout_constraintBottom_toTopOf="@+id/tagsTitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="center" android:textSize="18sp" android:layout_marginBottom="32dp" android:layout_marginTop="32dp"/>

            <TextView
                    android:text="@string/so_empty_here"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/emptyCloudTv"
                    android:fontFamily="casual"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tagsTitleTv"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/linkerLogoIv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center" android:textSize="18sp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>